# ULIS

./: .V2  .gitignore  .gitmodules  Build_VisualStudio_Solution_MSVC.bat  CMakeLists.txt  Clean_All.bat  CodingRules.md  FullBuildUE4_MacXcodex64.sh  FullBuildUE4_WinMSVCx64.bat  Generate_All.bat  Generate_MinGW_Makefile_GCC.bat  Generate_MinGW_Makefiles.bat  Generate_SublimeText_Project_GNU_GCC.sh  Generate_Ubuntu.sh  Generate_VisualStudio_Project.bat  Generate_VisualStudio_Solution_CLANG_LLVM.bat  Generate_VisualStudio_Solution_MSVC.bat  Generate_Xcode.command  Generate_Xcode.sh  LICENSE.md  License.md  ProjectDependencies.bat  README.md  ReadMe.md  Rebuild_All.bat  Setup.bat  Setup.command  Setup.sh  ULIS.Build.cs  metrics.txt
PyULIS2/: .gitignore  (+7 more)
ULIS/Source/ULIS/: CMakeLists.txt
ULIS/Source/ULIS/Include/: ULISBlock  ULISBlock2  ULIS_BLENDINGMODES  ULIS_Block  ULIS_Block_old  ULIS_CCOLOR  ULIS_CORE  ULIS_Core  ULIS_FDECL  ULIS_MATHS  ULIS_RESAMPLINGMETHODS
ULIS/Source/ULIS/Include/ULIS/: ULIS.Base.h  ULIS.BaseTypes.h  ULIS.Block.h  ULIS.Block2.h  ULIS.BlockSpecInfo_old.h  ULIS.BlockTypes_old.h  ULIS.CompileTimeParsingUtilities.h  ULIS.Config.h  ULIS.Core.h  ULIS.ForwardDeclarations.h  ULIS.PP.h  ULIS.PP_old.h  ULIS.Spec.h  ULIS.SpecReg.h  ULIS_SingleHeader.h
ULIS/Source/ULIS/Include/ULIS/Base/: ULIS.Base.AlignedMemory.h  ULIS.Base.BaseTypes.h  ULIS.Base.CPUConfig.h  ULIS.Base.CRC32.h  ULIS.Base.ConstStr.h  ULIS.Base.MD5.h  ULIS.Base.PerfStrat.h  ULIS.Base.PerformanceOptions.h  ULIS.Base.Platform.h  ULIS.Base.PreprocessorFramework.h  ULIS.Base.Registry.h  ULIS.Base.Types.h  ULIS.Base.VectorSIMD.h  ULIS.Base.WeakPRNG.h  ULIS.Base.WeakUUID.h
ULIS/Source/ULIS/Include/ULIS/Blend/: ULIS.Blend.BasicCompositing.h  ULIS.Blend.BlendAlpha.h  ULIS.Blend.BlendFunc.h  ULIS.Blend.BlendingContext.h  ULIS.Blend.BlendingModes.h  ULIS.Blend.BlockBlender.h  ULIS.Blend.Context.h  ULIS.Blend.PixelBlender.h
ULIS/Source/ULIS/Include/ULIS/ClearFill/: ULIS.ClearFIll.BlockClearer.h  ULIS.ClearFIll.BlockFiller.h  ULIS.ClearFIll.ClearFillContext.h
ULIS/Source/ULIS/Include/ULIS/Color/: ULIS.Color.AbstractColorSpace.h  ULIS.Color.CColor.h  ULIS.Color.ColorConsts.h  ULIS.Color.ColorMatching.h  ULIS.Color.ColorProfile.h  ULIS.Color.ColorSpace.h  ULIS.Color.ColorSpaces.h  ULIS.Color.Constants.h  ULIS.Color.DeviceColorSpace.h  ULIS.Color.Illuminants.h  ULIS.Color.LogicalColorSpace.h  ULIS.Color.ModelSupport.h  ULIS.Color.ProfileRegistry.h  ULIS.Color.SColor.h
ULIS/Source/ULIS/Include/ULIS/Conv/: ULIS.Conv.BlockTypeConverter.h  ULIS.Conv.Connection.h  ULIS.Conv.ConversionContext.h
ULIS/Source/ULIS/Include/ULIS/Data/: ULIS.Data.Block.h  ULIS.Data.Decl.h  ULIS.Data.ID.h  ULIS.Data.Layout.h  ULIS.Data.MD5.h  ULIS.Data.Mem.h  ULIS.Data.Meta.h  ULIS.Data.Op.h  ULIS.Data.PP.h  ULIS.Data.Pixel.h  ULIS.Data.Spec.h  ULIS.Data.SpecReg.h  ULIS.Data.Types.h  ULIS.Data.Vector.h
ULIS/Source/ULIS/Include/ULIS/FX/: ULIS.FX.FXContext.h
ULIS/Source/ULIS/Include/ULIS/Global/: ULIS.Global.GlobalCPUConfig.h  ULIS.Global.GlobalColor.h  ULIS.Global.GlobalPalettes.h  ULIS.Global.GlobalProfileRegistry.h  ULIS.Global.GlobalThreadPool.h
ULIS/Source/ULIS/Include/ULIS/Imaging/: ULIS.Imaging.Block.h  ULIS.Imaging.BlockSpecInfo.h  ULIS.Imaging.BlockTypes.h  ULIS.Imaging.Block_old.h
ULIS/Source/ULIS/Include/ULIS/Interface/: ULIS.Interface.Access.h  ULIS.Interface.Blend.h  ULIS.Interface.ClearFill.h  ULIS.Interface.Conv.h  ULIS.Interface.Decl.h  ULIS.Interface.FX.h  ULIS.Interface.GlobalPool.h  ULIS.Interface.Init.h  ULIS.Interface.Make.h  ULIS.Interface.Paint.h  ULIS.Interface.Spec.h  ULIS.Interface.Transform.h
ULIS/Source/ULIS/Include/ULIS/Make/: ULIS.Make.BlockCopier.h  ULIS.Make.MakeContext.h  (+1 more)
ULIS/Source/ULIS/Source/ULIS/: ULIS.Block.cpp
ULIS/Source/ULIS_Features/: CMakeLists.txt
ULIS/Source/ULIS_Features/Source/: ULIS_Features.cpp
ULIS/Source/ULIS_GUI/: CMakeLists.txt
ULIS/Source/ULIS_GUI/Source/: ULIS_GUI.cpp
ULIS/Source/ULIS_GUI_Chromaticity/: CMakeLists.txt
ULIS/Source/ULIS_GUI_Chromaticity/Source/: ULIS_GUI_Chromaticity.cpp
ULIS/Source/ULIS_GUI_Conv/: CMakeLists.txt
ULIS/Source/ULIS_GUI_Conv/Source/: ULIS_GUI_Conv.cpp
ULIS/Source/ULIS_GUI_FX/: CMakeLists.txt
ULIS/Source/ULIS_GUI_FX/Source/: ULIS_GUI_FX.cpp
ULIS/Source/ULIS_Profiler/: CMakeLists.txt
ULIS/Source/ULIS_Profiler/Source/: ULIS_Profiler.cpp
ULIS/Source/ULIS_Test/: CMakeLists.txt
ULIS/Source/ULIS_Test/Source/: ULIS_Test.cpp
binding/Python/: CMakeLists.txt
binding/Python/CPython-module/Types/: AbstractPixel.ipp
binding/Python/PyULIS3/: Types.py
binding/WebAssembly/: CMakeLists.txt  commands.txt
binding/WebAssembly/wBlendDemo/: CMakeLists.txt
binding/WebAssembly/wBlendDemo/src/: wBlendDemo.cpp
binding/WebAssembly/wFormats/: CMakeLists.txt
binding/WebAssembly/wimgui_interop/: CMakeLists.txt
bindings/WebAssembly/wBlendDemo/: CMakeLists.txt
bindings/python/: CMakeLists.txt
bindings/python/CPython-module/: PyULIS3.cpp  macros.h
bindings/python/CPython-module/Types/: AbstractPixel.ipp  Block.ipp  PixelProxy.ipp  PixelValue.ipp
bindings/wasm/: CMakeLists.txt  commands.txt
bindings/wasm/Formats/: CMakeLists.txt
bindings/wasm/SDL_Display/: CMakeLists.txt  SDL_Display.cpp
bindings/wasm/imgui/: CMakeLists.txt
bindings/wasm/imgui_interop/: CMakeLists.txt
bindings/wasm/imgui_interop/src/: main.cpp  oldmain.cpp
bindings/wasm/wBlendDemo/: wBlendDemo.html
bindings/wasm/wBlendDemo/src/: wBlendDemo.cpp
bindings/wasm/wFormats/: CMakeLists.txt  wFormats.cpp
bindings/wasm/wimgui_interop/: CMakeLists.txt  wimgui_interop.html
bindings/wasm/wimgui_interop/src/: main.cpp  wimgui_interop.cpp
sample/Particles/: CMakeLists.txt  Particles.cpp  Particles.h  main.cpp
sample/Transform/: CMakeLists.txt  Transform.cpp
samples/Bezier/: Bezier.cpp  CMakeLists.txt
samples/Kernel/: CMakeLists.txt  Kernel.cpp
samples/SimpleFluid/: CMakeLists.txt  SimpleFluid.cpp  SimpleFluid.h  main.cpp
samples/TiledBlock/: CMakeLists.txt  Canvas.cpp  Canvas.h  TiledBlock.cpp  main.cpp
script/Little-CMS/: CMakeLists.txt
(+2097 files in other folders)
